--- a/src/components/menu/Navigation.astro
+++ b/src/components/menu/Navigation.astro
@@ -10,7 +10,7 @@ const navigationItems = [
 <div id="links-content" class="relative w-full transition-all duration-300 opacity-100 pointer-events-auto">
   <div 
     id="links-illustration"
-    class="w-80 h-80 bg-cover rounded-full absolute left-1/2 -translate-x-1/2 opacity-0 -top-20 transition-all duration-300"
+    class="w-80 h-80 bg-cover rounded-full absolute left-1/2 -translate-x-1/2 opacity-0 -top-20 transition-all duration-300 my-[33%] mx-auto"
   ></div>
   <nav class="flex flex-col justify-center items-center gap-6">
     {
