--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -29,6 +29,7 @@ const sortedYears = Object.keys(projectsByYear).sort((a, b) => parseInt(b) - par
     line1: "Happy Pixels",
     line2: "Better Lives"
   }}
+  additionalClasses="[&>main]:max-lg:!items-start [&>main]:lg:pl-3"
   subtitle="Timeline of my work with several product partners"
 >
   <div class="timeline">
