--- a/src/layouts/ContentLayout.astro
+++ b/src/layouts/ContentLayout.astro
@@ -4,12 +4,13 @@ import Breadcrumbs from '../components/Breadcrumbs.astro';
 import ShowcaseImage from '../components/ShowcaseImage.astro';
 import CategoryPill from '../components/buttons/CategoryPill.astro';
 import Gem from '../components/Gem.astro';
-import * as Icon from '@astropub/icons'
+import * as Icon from '@astropub/icons';
 
-interface Props {
+type Crumb = { text: string; href: string };
+type Props = {
   // Common props
   title: string;
-  breadcrumbs?: Array<{ text: string; href: string }>;
+  breadcrumbs?: Crumb[];
   additionalClasses?: string;
   
   // Layout type
@@ -27,25 +28,19 @@ interface Props {
   showcase?: string;
 }
 
+const props = Astro.props as Props;
 const {
-  // Common props
   title,
   variant = 'simple',
   additionalClasses = '',
-  
-  // Simple layout specific props
+  breadcrumbs = variant === 'thought' ? [{ text: 'Back', href: '/thoughts' }] : [],
   subtitle,
   showcaseImage = '',
   showcaseImageAlt = '',
-  
-  // Thought layout specific props
   date,
   categories = [],
   showcase,
-} = Astro.props;
-
-// Set default breadcrumbs after getting variant
-const { breadcrumbs = variant === 'thought' ? [{ text: 'Back', href: '/thoughts' }] : [] } = Astro.props;
+} = props;
 ---
 
 <Layout title={title}>
@@ -64,7 +59,7 @@ const { breadcrumbs = variant === 'thought' ? [{ text: 'Back', href: '/thoughts'
         {variant === 'simple' && subtitle && <div class="subdetails">{subtitle}</div>}
         
         {variant === 'thought' && (
-          <>
+          <Fragment>
             <div class="subdetail">
               <Gem />
               <time>{date}</time>
@@ -74,7 +69,7 @@ const { breadcrumbs = variant === 'thought' ? [{ text: 'Back', href: '/thoughts'
                 <CategoryPill category={category} isActive={true} />
               ))}
             </div>
-          </>
+          </Fragment>
         )}
       </header>
 
@@ -102,7 +97,6 @@ const { breadcrumbs = variant === 'thought' ? [{ text: 'Back', href: '/thoughts'
     </article>
   </main>
 </Layout>
-
 <style>
   .notion-content :global(p) {
     @apply mb-6;
@@ -162,3 +156,4 @@ const { breadcrumbs = variant === 'thought' ? [{ text: 'Back', href: '/thoughts'
     @apply w-full my-6 rounded-lg;
   }
 </style>
+
