--- a/src/components/menu/Guestbook.astro
+++ b/src/components/menu/Guestbook.astro
@@ -1,7 +1,7 @@
 ---
 import Button from '../buttons/Button.astro';
 ---
-<div id="backlog-content" class="absolute inset-0 space-y-5 text-center font-medium transition-all duration-300 opacity-0 pointer-events-none">
+<div id="backlog-content" class="absolute inset-0 space-y-5 text-center font-medium transition-all duration-300 opacity-0 pointer-events-none absolute">
   <Button variant="textual-button" additionalClasses="back-to-menu mb-8">← Back to menu</Button>
   
   <div id="guestbook-wrapper">
