--- a/src/components/structural/AsideTitle.astro
+++ b/src/components/structural/AsideTitle.astro
@@ -14,10 +14,7 @@ const { line1, line2, additionalClasses = '' } = Astro.props;
 </h1>
 
 <style>
-  h1 {
-    @apply text-7xl text-inkDark;
-    span {
-      @apply leading-none;
-    }
+  h1 span {
+    @apply leading-none;
   }
 </style>
