--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -116,7 +116,7 @@ const { title, body_classes = '' } = Astro.props;
 	}
 
   h1 {
-    @apply font-instrument text-6xl text-inkDark leading-none;
+    @apply font-instrument text-7xl text-inkDark leading-none max-lg:text-6xl;
   }
   h2 {
     @apply font-instrument text-4xl text-inkDark my-4;
