--- a/src/components/menu/Navigation.astro
+++ b/src/components/menu/Navigation.astro
@@ -7,7 +7,7 @@ const navigationItems = [
   { path: '/contact', label: 'Contact', image: '/keyboard.png' },
 ];
 ---
-<div id="links-content" class="relative w-full transition-all duration-300 opacity-100 pointer-events-auto">
+<div id="links-content" class="w-full transition-all duration-300 opacity-100 pointer-events-auto relative">
   <div 
     id="links-illustration"
     class="w-80 h-80 bg-cover rounded-full absolute left-1/2 -translate-x-1/2 opacity-0 -top-20 transition-all duration-300 my-[33%] mx-auto"
@@ -30,8 +30,8 @@ const navigationItems = [
 
 <style>
   .menu-link {
-    @apply text-7xl text-inkDark font-instrument transition-all duration-300 
-    hover:text-brand relative opacity-0 -translate-y-4;
+    @apply text-7xl text-inkDark font-instrument transition-all duration-300 hover:text-brand relative opacity-0 -translate-y-4
+    max-lg:text-5xl;
     animation: fadeInUp 0.5s forwards;
     animation-delay: calc(var(--index) * 100ms);
   }
