--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -168,4 +168,14 @@ const skills = [
   .download-section {
     @apply mt-8;
   }
+  .hide-scrollbar {
+    @apply overflow-auto;
+  }
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .hide-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 </style>
