added start of thoughts2

--- a/src/components/buttons/IconButton.astro
+++ b/src/components/buttons/IconButton.astro
@@ -37,7 +37,7 @@ const {
     @apply w-10 h-10 rounded-md bg-transparent
     flex items-center justify-center text-center
     shadow-inkLighter/50 relative transition-all
-    hover:shadow-inner hover:bg-ink hover:text-white
+    hover:shadow-inner hover:bg-inkLighter hover:text-white
     z-0;
   }
 
@@ -46,7 +46,7 @@ const {
   }
 
   .icon-button.active {
-    @apply bg-brand text-white hover:bg-brandDark;
+    @apply bg-inkDark text-white hover:bg-inkLighter;
   }
 
   .tooltip {
