--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -133,7 +133,7 @@ const { title, body_classes = '', bg_classes = '' } = Astro.props;
   }
 
   .base-background {
-    @apply bg-cover w-full h-full absolute inset-0 z-0;
+    @apply bg-cover w-full h-screen fixed inset-0 z-0;
   }
 
   .text--eyebrow {
