--- a/src/pages/about2.astro
+++ b/src/pages/about2.astro
@@ -8,7 +8,7 @@ import * as Icon from '@astropub/icons'
 ---
 
 <!-- bg-[url('landscape.png')] opacity-80 -->
-<Base title="test" bg_classes="">
+<Base title="About" bg_classes="bg-[url('/public/landscape-two.png')] opacity-50 blur-sm">
     <section class="base-section--small">
       <h4 class="text--eyebrow">About Me</h4>
       <h1>
@@ -80,8 +80,6 @@ import * as Icon from '@astropub/icons'
       <p class="text-base leading-7">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
       </p>
-      
-      
     </section>
 
     <img src="/public/backgrounds/03.png" class="-mb-20" />
