--- a/src/pages/index2.astro
+++ b/src/pages/index2.astro
@@ -24,7 +24,7 @@ try {
 
 ---
 <!-- bg-[url('landscape.png')] opacity-80 -->
-<Base title="test" bg_classes="bg-[url('kt.png')] bg-center opacity-25">
+<Base title="Home" bg_classes="bg-[url('/public/index-landscape.png')] opacity-50">
     <section class="base-section--small">
       <h4 class="text--eyebrow">Karina Tovar</h4>
       <h1>
