--- a/src/pages/index2.astro
+++ b/src/pages/index2.astro
@@ -24,7 +24,7 @@ try {
 
 ---
 <!-- bg-[url('landscape.png')] opacity-80 -->
-<Base title="Home" bg_classes="bg-[url('/public/index-landscape.png')] opacity-50">
+<Base title="Home" bg_classes="bg-[url('/public/landscape.png')] mix-blend-multiply opacity-50">
     <section class="base-section--small">
       <h4 class="text--eyebrow">Karina Tovar</h4>
       <h1>
@@ -44,6 +44,7 @@ try {
         <SpotifyHoverCard {...spotifyData} />
       </div>
     </section>
+    <img src="/public/kt.png" class="mix-blend-multiply -mb-20" draggable="false" />
 </Base>
 
 
