--- a/src/pages/about2.astro
+++ b/src/pages/about2.astro
@@ -8,7 +8,7 @@ import * as Icon from '@astropub/icons'
 ---
 
 <!-- bg-[url('landscape.png')] opacity-80 -->
-<Base title="About" bg_classes="bg-[url('/public/landscape-two.png')] opacity-50 blur-sm">
+<Base title="About" bg_classes="bg-[url('/public/landscape.png')] mix-blend-multiply opacity-50">
     <section class="base-section--small">
       <h4 class="text--eyebrow">About Me</h4>
       <h1>
@@ -82,7 +82,7 @@ import * as Icon from '@astropub/icons'
       </p>
     </section>
 
-    <img src="/public/backgrounds/03.png" class="-mb-20" />
+    <img src="/backgrounds/03.png" class="-mb-20" />
 </Base>
 
 
