--- a/src/components/buttons/Button.astro
+++ b/src/components/buttons/Button.astro
@@ -108,10 +108,10 @@ const {
            justify-center 
            overflow-hidden 
            rounded-md 
-           bg-brand 
+           bg-brandDark 
            px-4 
            font-medium 
-           text-paper 
+           text-white
            text-base 
            transition-all 
            hover:shadow-md;
